# human_model

./: .gitignore  CMakeLists.txt  README.md  combined-human-pr2.xacro  combined-model.config  combined_human_pr2.pacer  combined_human_pr2.sdf  combined_human_pr2.xacro  combined_human_pr2_pacer.cpp  human-model-include.xacro  human-model.config  human-model.sdf  human-model.xacro  human.config  human.pacer  human_measurements.xlsx  human_pacer.cpp  initial_joint_velocity_plugin.cpp  listener.cpp  main.cpp  model.config  model.sdf  package.xml  pd_controller.h  pr2-include.xacro  pr2.nomodel.sdf  pr2.urdf  pr2.xacro  robot-controller.cpp  run_scenario.sh  stable-controller-plugin.cpp  world.include  world.sdf
data/: human_measurements.xlsx
models/arm-calibration/: model.config  pr2-calibration.xacro  world.xacro
models/combined-human-pr2/: combined-human-pr2.model  combined-human-pr2.pacer  combined-human-pr2.xacro  connecting-joint.include  world.xacro
models/combined-human-pr2-zero-effort/: combined-human-pr2.xacro  model.config  world.xacro
models/human/: human.include  world.xacro
models/locked-arms/: locked-arms.xacro  model.config  world.xacro
models/pr2/: model.config  pr2-include.xacro  pr2.highfriction.include  pr2.include  pr2.sdf  pr2.xacro  pr2_description  world.xacro
src/: angular-momentum-over-time-plugin.cpp  arm-calibration-plugin.cpp  chainiksolverpos_nr_jl_position_only.cpp  chainiksolverpos_nr_jl_position_only.hpp  com-acc-over-time-plugin.cpp  com-velocity-over-time-plugin.cpp  combined_human_pr2_pacer.cpp  contact-forces-over-time-plugin.cpp  contact-forces-per-link-over-time-plugin.cpp  contact-forces-plugin.cpp  head-impact-plugin.cpp  human_pacer.cpp  initial-joint-position-plugin.cpp  initial-joint-velocity-plugin.cpp  initial-link-energy-plugin.cpp  initial-link-position-plugin.cpp  initial_joint_velocity_plugin.cpp  joint-angles-plugin.cpp  joint-forces-plugin.cpp  link-acc-over-time-plugin.cpp  link-energy-over-time-plugin.cpp  min-max-joint-position-plugin.cpp  set-human-position-plugin.cpp  stable-controller-plugin.cpp
